--- a/home.html
+++ b/home.html
@@ -1,1 +1,13 @@
 <!--Coded by: Pei Ying, Angelica, Xin Li, Aisyah-->
+<!DOCTYPE html>
+<html>
+<head>
+ 	<title>Word Typing Game</title>
+</head>
+<body>
+
+	<h1>My First Heading</h1>
+	<p>My first paragraph.</p>
+
+</body>
+</html>
