--- a/Cambodia.html
+++ b/Cambodia.html
@@ -1,13 +1,18 @@
 <!--Coded by: Pei Ying, Angelica, Xin Li, Aisyah-->
 <!DOCTYPE html>
 <html>
+
 <head>
- 	<title>Word Typing Game: Cambodia</title>
+    <title>Word Typing Game: Cambodia</title>
 </head>
+
 <body>
 
-	<h1>My First Heading</h1>
-	<p>My first paragraph.</p>
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+
+    <!-- hi aisyah here -->
 
 </body>
+
 </html>
