Cambodia information page

--- a/Cambodia.html
+++ b/Cambodia.html
@@ -22,7 +22,7 @@
 </div>
 <hr style="clear:both;" />
 <div>
-<textarea name="" id="input_text" cols="30" rows="10">Suddenly quite near him there was a rifle shot. He heard the crack and smack and whistling ricochet among the rocks behind him. He dropped his torch and began feebly to trot.</textarea>
+<textarea name="" id="input_text" cols="30" rows="10">Arsenic contamination was found in Cambodia's drinking water during the Cambodia Drinking Water Quality Assessment, which has significantly affected human and animal health and the environmental quality of water bodies. Arsenic exposure has caused more than 500 documented cases of illness, and numerous amputations and fatalities. Directly or indirectly, water essentially keeps people and the environment healthy. Arsenic contamination would put millions of people at risk if no action were taken.</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
 <script src="TypingGameJS.js"></script>
