--- a/Thailand.html
+++ b/Thailand.html
@@ -6,10 +6,40 @@
 </head>
 <body>
 
-	<h1>My First Heading</h1>
+	<h1>Thailand Water Pollution</h1>
+	<a href="https://thailand.opendevelopmentmekong.net/topics/environment-and-natural-resources/">Thailand Water environment-and-natural-resources</a>
+	<a href="#Water Resources">Click here to scroll</a>
+
+<A name="Water Resources"></a>
+	
 	<p>My first paragraph.</p>
 
 	<p>thailand open source</p>
+
+	<link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+ 	<title>Word Typing Game: Cambodia</title>
+</head>
+
+<body>
+<h1 id="output"></h1>
+<div class="target mono" id="target"></div>
+<div id="your-attempt" class="mono your-attempt" placeholder="Your text will appear here"></div>
+<div class="results">
+  <ul class="stats">
+    <li>Words per minute <span id="wpm">0</span></li>
+    <li>Wordcount <span id="wordcount">0</span></li>
+    <li>Timer <span id="timer">0</span></li>
+    <li>Errors <span id="errors">0</span></li>
+  </ul>
+</div>
+<hr style="clear:both;" />
+<div>
+<textarea name="" id="input_text" cols="30" rows="10">Thailand possess abundant water resources, however the volume of renewable internal freshwater resources per capita has reduced from about 7,700 m3 per capita in 1962 to about 3,300 m3 in 2014. This represents increased water scarcity contributing to prolonged dry seasons in Thailand.</textarea>
+</div>
+<a href="ThailandInfo" id="reset">Reset</a>
+<script src="TypingGameJS.js"></script>
+
 
 </body>
 </html>
