--- a/Vietnam.html
+++ b/Vietnam.html
@@ -1,13 +1,31 @@
 <!--Coded by: Pei Ying, Angelica, Xin Li, Aisyah-->
 <!DOCTYPE html>
 <html>
+
 <head>
+	<link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
  	<title>Word Typing Game: Vietnam</title>
 </head>
+
 <body>
-
-	<h1>My First Heading</h1>
-	<p>My first paragraph.</p>
-
+<h1 id="output"></h1>
+<h2>09 January 2018</h2> 
+<div class="target mono" id="target"></div>
+<div id="your-attempt" class="mono your-attempt" placeholder="Your text will appear here"></div>
+<div class="results">
+  <ul class="stats">
+    <li>Words per minute <span id="wpm">0</span></li>
+    <li>Wordcount <span id="wordcount">0</span></li>
+    <li>Timer <span id="timer">0</span></li>
+    <li>Errors <span id="errors">0</span></li>
+  </ul>
+</div>
+<hr style="clear:both;" />
+<div>
+<textarea name="" id="input_text" cols="50" rows="50">In 2016, Vietnam’s population had reached 92.7 million people, which means that although significant improvements in the provision of water supply, sanitation, and hygiene services to the population have been made, substantial numbers of people still lack access to basic services. For example, in 2015, 8.2 million people still lacked access to ‘basic’ access to a water supply that does not involve more than a 30 minute return journey to access clean water and 20.3 million people lacked access ‘basic’ access to sanitation services, which enable separation from fecal waste.</textarea>
+</div>
+<a href="#" id="reset">Reset</a>
+<script src="TypingGameJS.js"></script>
 </body>
 </html>
