--- a/Cambodia.html
+++ b/Cambodia.html
@@ -25,6 +25,7 @@
 <textarea name="" id="input_text" cols="30" rows="10">Arsenic contamination was found in Cambodia's drinking water during the Cambodia Drinking Water Quality Assessment, which has significantly affected human and animal health and the environmental quality of water bodies. Arsenic exposure has caused more than 500 documented cases of illness, and numerous amputations and fatalities. Directly or indirectly, water essentially keeps people and the environment healthy. Arsenic contamination would put millions of people at risk if no action were taken.</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
+<a href="#" id="home">Home</a>
 <script src="TypingGameJS.js"></script>
 </body>
 </html>
