--- a/home.html
+++ b/home.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 
-	<h1>My First Heading</h1>
-	<p>My first paragraph.</p>
+	<h1>Speed Typing</h1>
+	<button type="button" onclick="buttonFunction()">Start</button>
 
 </body>
+ 	<script>
+ 		function buttonFunction() {
+    		window.location.href = "Countries.html";
+		}
+ 	</script>
 </html>
