Game page links to each othe

--- a/Thailand.html
+++ b/Thailand.html
@@ -35,10 +35,10 @@
 </div>
 <hr style="clear:both;" />
 <div>
-<textarea name="" id="input_text" cols="30" rows="10">Thailand possess abundant water resources, however the volume of renewable internal freshwater resources per capita has reduced from about 7,700 m3 per capita in 1962 to about 3,300 m3 in 2014. This represents increased water scarcity contributing to prolonged dry seasons in Thailand.</textarea>
+<textarea name="" id="input_text" cols="30" rows="10">Thailand</textarea>
 </div>
 <a href="ThailandInfo" id="reset">Reset</a>
-<script src="TypingGameJS.js"></script>
+<script src="TypingGameJS2.js"></script>
 
 
 </body>
