--- a/Vietnam.html
+++ b/Vietnam.html
@@ -23,9 +23,9 @@
 </div>
 <hr style="clear:both;" />
 <div>
-<textarea name="" id="input_text" cols="50" rows="50">In 2016, Vietnam’s population had reached 92.7 million people, which means that although significant improvements in the provision of water supply, sanitation, and hygiene services to the population have been made, substantial numbers of people still lack access to basic services. For example, in 2015, 8.2 million people still lacked access to ‘basic’ access to a water supply that does not involve more than a 30 minute return journey to access clean water and 20.3 million people lacked access ‘basic’ access to sanitation services, which enable separation from fecal waste.</textarea>
+<textarea name="" id="input_text" cols="50" rows="50">In 2016</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
-<script src="TypingGameJS.js"></script>
+<script src="TypingGameJS4.js"></script>
 </body>
 </html>
