--- a/Thailand.html
+++ b/Thailand.html
@@ -7,15 +7,7 @@
 <body>
 
 	<h1>Thailand Water Pollution</h1>
-	<a href="https://thailand.opendevelopmentmekong.net/topics/environment-and-natural-resources/">Thailand Water environment-and-natural-resources</a>
-	<a href="#Water Resources">Click here to scroll</a>
-
-<A name="Water Resources"></a>
 	
-	<p>My first paragraph.</p>
-
-	<p>thailand open source</p>
-
 	<link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
  	<title>Word Typing Game: Cambodia</title>
@@ -37,7 +29,9 @@
 <div>
 <textarea name="" id="input_text" cols="30" rows="10">Thailand possess abundant water resources, however the volume of renewable internal freshwater resources per capita has reduced from about 7,700 m3 per capita in 1962 to about 3,300 m3 in 2014. This represents increased water scarcity contributing to prolonged dry seasons in Thailand.</textarea>
 </div>
-<a href="ThailandInfo" id="reset">Reset</a>
+<a href="#" id="reset">Reset</a>
+<a href="#" id="home">Home</a>
+
 <script src="TypingGameJS.js"></script>
 
 
