--- a/Cambodia.html
+++ b/Cambodia.html
@@ -6,6 +6,7 @@
 	<link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
  	<title>Word Typing Game: Cambodia</title>
+ 	<h1>Cambodia Water Pollution</h1>
 </head>
 
 <body>
