--- a/Laos.html
+++ b/Laos.html
@@ -5,7 +5,8 @@
 <head>
     <link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <title>Word Typing Game: Cambodia</title>
+    <title>Word Typing Game: Laos</title>
+    <h1>Laos Water Pollution</h1>
 </head>
 
 <body>
