--- a/Vietnam.html
+++ b/Vietnam.html
@@ -6,11 +6,11 @@
 	<link href='TypingGameCSS.css' rel='stylesheet' type='text/css'/>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
  	<title>Word Typing Game: Vietnam</title>
+ 	<h1>Vietnam Water Pollution</h1>
 </head>
 
 <body>
 <h1 id="output"></h1>
-<h2>09 January 2018</h2> 
 <div class="target mono" id="target"></div>
 <div id="your-attempt" class="mono your-attempt" placeholder="Your text will appear here"></div>
 <div class="results">
