--- a/Vietnam.html
+++ b/Vietnam.html
@@ -26,6 +26,7 @@
 <textarea name="" id="input_text" cols="50" rows="50">Vietnam example</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
+<a href="index.html" id="home">Home</a>
 <script src="TypingGameJS4.js"></script>
 </body>
 </html>
