--- a/Cambodia.html
+++ b/Cambodia.html
@@ -26,7 +26,7 @@
 <textarea name="" id="input_text" cols="30" rows="10">Cambodia example</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
-<a href="#" id="home">Home</a>
+<a href="index.html" id="home">Home</a>
 <script src="TypingGameJS.js"></script>
 </body>
 </html>
