--- a/Laos.html
+++ b/Laos.html
@@ -26,5 +26,5 @@
 <textarea name="" id="input_text" cols="30" rows="10">Laos example</textarea>
 </div>
 <a href="#" id="reset">Reset</a>
-<a href="#" id="home">Home</a>
+<a href="index.html" id="home">Home</a>
 <script src="TypingGameJS3.js"></script>
